src/test/resources/software/amazon/smithy/lsp/project/invalid-syntax/main.smithy
$version: "2.0"

namespace com.foo

structure Foo {
    bar: String
}

structure A
